src/objects/CRA__c.object
<CustomObject>
    <customHelpPage>Custom_Help</customHelpPage>
    <fields>
        <fullName>Assessment_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment/Treatment</label>
        <referenceTo>HRB_Form__c</referenceTo>
        <relationshipLabel>CRA</relationshipLabel>
        <relationshipName>CRA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRA</relationshipLabel>
        <relationshipName>CRA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10_Emotional_life_feelings__c</fullName>
        <label>10. Emotional life (feelings)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11_Communication__c</fullName>
        <label>11. Communication</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_General_happiness__c</fullName>
        <label>12. General happiness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X13_Motivation__c</fullName>
        <label>13. Motivation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X14_Other__c</fullName>
        <label>14. Other</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Health_self_care__c</fullName>
        <inlineHelpText>How happy am I with this area of my life?
Select one numbers from 1 to 10</inlineHelpText>
        <label>1. Health &amp; self care</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2a_Substance_use__c</fullName>
        <label>2a. Cannabis use/non use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2b__c</fullName>
        <label>2b. Alcohol use/non use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2c_Other_drug_use_non_use__c</fullName>
        <label>2c. Other drug use/non use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3a_Relationships_with_Partner__c</fullName>
        <label>3a. Relationships with Partner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3b_Relationshipsfriends__c</fullName>
        <label>3b. Relationships with friends</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3c_Relationships_with_Parents__c</fullName>
        <label>3c. Relationships with Parents/caregiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4_Job_or_education_progress__c</fullName>
        <label>4. Job or education progress</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Social_Activities__c</fullName>
        <label>5. Social Activities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X6_Recreational_activities__c</fullName>
        <label>6. Recreational activities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7_Personal_habits__c</fullName>
        <inlineHelpText>(e.g. getting up in the morning, being on time, finishing tasks)</inlineHelpText>
        <label>7. Personal habits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X8_Legal_issues__c</fullName>
        <label>8. Legal issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X9_Money_management__c</fullName>
        <label>9. Money management</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CRA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date__c</columns>
        <columns>Assessment_Treatment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRA-{DDMMYY}-{000}</displayFormat>
        <label>CRA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>